Fixed IE's lack of support for Canvas, layout issues.

--- a/Inventory/inventory.css
+++ b/Inventory/inventory.css
@@ -17,6 +17,10 @@ master.css
 	overflow: hidden;
 }
 
+*html #inv_anchor {
+	position: absolute;
+}
+
 #inv_holder {
 	width: 56px;
 	margin: 5px 0 0 3px;
@@ -67,10 +71,15 @@ master.css
 	background: #000;
 	background: rgba(0, 0, 0, .8);
 	border: 2px solid #fff;
+	display: none;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 6px;
 	-webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.7);
 	-moz-box-shadow: 0px 0px 5px rgba(0,0,0,.7);
+}
+
+*html #inv_files {
+	position: absolute;
 }
 
 #inv_files ul {
@@ -89,6 +98,7 @@ master.css
 	padding: 0;
 	position: relative;
 	float: left;
+	clear: both;
 	font-size: 13px !important;
 	line-height: 18px;
 	list-style-type: none;
@@ -122,11 +132,12 @@ master.css
 #inv_files ul li .sub {
 	position: absolute;
 	bottom: 0;
-	left: -220px;
+	margin-left: -220px;
 	display: none;
 	background: #000;
 	background: rgba(0,0,0,.8);
 	font-family: "Lucida Grande", Arial, Verdana, sans-serif;
+	background: #000;
 	background: rgba(0, 0, 0, .8);
 	border: 2px solid rgba(250,250,250,.8);
 	-webkit-border-radius: 4px;
